@@ -1,3 +1,11 @@
+2014-03-14  eig  <eig114@gmail.com>
+
+	* Main.cs: Расширение функционала - может обрабатывать
+	  несколько файлов, принимает аргументы --n=X --top=X,
+	  контролирующие длину n-грам и количество выводимых.
+
+	* Profiler.cs: 
+
 2014-03-13  eig  <eig114@gmail.com>
 
 	* Profiler.cs: Функции для вычисления расстояний между
